update status codes
