# impl/pkg/server/gateway.go
@@ -40,6 +40,7 @@ func (p PublishDIDRequest) toServiceRequest(did string) service.PublishDIDReques
 }
 
 // PublishDID godoc
+//
 //	@Summary		Publish a DID document
 //	@Description	Publish a DID document to the DHT
 //	@Tags			DID
@@ -51,6 +52,7 @@ func (p PublishDIDRequest) toServiceRequest(did string) service.PublishDIDReques
 //	@Failure		409	{string}	string	"DID already exists with a higher sequence number"
 //	@Failure		500	{string}	string	"Internal server error"
 //	@Router			/dids/{id} [put]
+//
 // TODO(gabe) support historical document storage https://github.com/TBD54566975/did-dht-method/issues/16
 func (r *GatewayRouter) PublishDID(c *gin.Context) {
 	id := GetParam(c, IDParam)
@@ -94,6 +96,7 @@ type GetDIDResponse struct {
 }
 
 // GetDID godoc
+//
 //	@Summary		Get a DID document
 //	@Description	Get a DID document
 //	@Tags			DID
@@ -103,7 +106,9 @@ type GetDIDResponse struct {
 //	@Failure		400	{string}	string	"Invalid request"
 //	@Failure		404	{string}	string	"DID not found"
 //	@Failure		500	{string}	string	"Internal server error"
+//	@Failure		501	{string}	string	"Historical resolution not supported by this gateway"
 //	@Router			/dids/{id} [get]
+//
 // TODO(gabe) support historical queries https://github.com/TBD54566975/did-dht-method/issues/16
 func (r *GatewayRouter) GetDID(c *gin.Context) {
 	id := GetParam(c, IDParam)
@@ -132,17 +137,18 @@ type GetTypesResponse struct {
 }
 
 // GetTypes godoc
+//
 //	@Summary		Get a list of supported types
 //	@Description	Get a list of supported types
 //	@Tags			DID
 //	@Accept			json
 //	@Success		200	{object}	GetTypesResponse
-//	@Failure		404	{string}	string	"Type indexing is not supported by this gateway"
+//	@Failure		501	{string}	string	"Type indexing is not supported by this gateway"
 //	@Router			/dids/types [get]
 func (r *GatewayRouter) GetTypes(c *gin.Context) {
 	resp := r.service.GetTypes()
 	if len(resp.Types) == 0 {
-		LoggingRespondErrMsg(c, "types not supported", http.StatusNotFound)
+		LoggingRespondErrMsg(c, "types not supported", http.StatusNotImplemented)
 		return
 	}
 
@@ -155,6 +161,7 @@ type GetDIDsForTypeResponse struct {
 }
 
 // GetDIDsForType godoc
+//
 //	@Summary		Get a list of DIDs for a given type
 //	@Description	Get a list of DIDs for a given type
 //	@Tags			DID
@@ -163,6 +170,7 @@ type GetDIDsForTypeResponse struct {
 //	@Failure		400	{string}	string	"Invalid request"
 //	@Failure		404	{string}	string	"Type not found"
 //	@Failure		500	{string}	string	"Internal server error"
+//	@Failure		501	{string}	string	"Type indexing is not supported by this gateway"
 //	@Router			/dids/types/{id} [get]
 func (r *GatewayRouter) GetDIDsForType(c *gin.Context) {
 	id := GetParam(c, IDParam)
@@ -197,13 +205,14 @@ type GetDifficultyResponse struct {
 }
 
 // GetDifficulty godoc
+//
 //	@Summary		Get the current difficulty for the gateway's retention proof feature
 //	@Description	Get the current difficulty for the gateway's retention proof feature
 //	@Tags			DID
 //	@Accept			json
 //	@Success		200	{object}	int
-//	@Failure		404	{string}	string	"Retention proofs are not supported by this gateway"
 //	@Failure		500	{string}	string	"Internal server error"
+//	@Failure		501	{string}	string	"Retention proofs are not supported by this gateway"
 //	@Router			/difficulty [get]
 func (r *GatewayRouter) GetDifficulty(c *gin.Context) {
 	resp, err := r.service.GetDifficulty()
@@ -213,7 +222,7 @@ func (r *GatewayRouter) GetDifficulty(c *gin.Context) {
 	}
 
 	if resp == nil {
-		LoggingRespondErrMsg(c, "retention proofs not supported", http.StatusNotFound)
+		LoggingRespondErrMsg(c, "retention proofs not supported", http.StatusNotImplemented)
 		return
 	}
 
